legend-pure-rust/crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_association.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "association",
      "name": "PersonAddress",
      "package": "model",
      "properties": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "model::Person",
              "sourceInformation": {
                "endColumn": 25,
                "endLine": 19,
                "sourceId": "association.pure",
                "startColumn": 13,
                "startLine": 19
              }
            },
            "sourceInformation": {
              "endColumn": 25,
              "endLine": 19,
              "sourceId": "association.pure",
              "startColumn": 13,
              "startLine": 19
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "person",
          "sourceInformation": {
            "endColumn": 10,
            "endLine": 19,
            "sourceId": "association.pure",
            "startColumn": 5,
            "startLine": 19
          }
        },
        {
          "genericType": {
            "rawType": {
              "fullPath": "model::Address",
              "sourceInformation": {
                "endColumn": 29,
                "endLine": 20,
                "sourceId": "association.pure",
                "startColumn": 16,
                "startLine": 20
              }
            },
            "sourceInformation": {
              "endColumn": 29,
              "endLine": 20,
              "sourceId": "association.pure",
              "startColumn": 16,
              "startLine": 20
            }
          },
          "multiplicity": {
            "lowerBound": 0
          },
          "name": "addresses",
          "sourceInformation": {
            "endColumn": 13,
            "endLine": 20,
            "sourceId": "association.pure",
            "startColumn": 5,
            "startLine": 20
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 21,
        "sourceId": "association.pure",
        "startColumn": 1,
        "startLine": 17
      }
    },
    {
      "_type": "sectionIndex",
      "name": "association.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "model::PersonAddress"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "association.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "association.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
