legend-pure-rust/crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_class_with_annotations.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "class",
      "name": "Person",
      "package": "model::domain",
      "properties": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 16,
                "endLine": 19,
                "sourceId": "class_with_annotations.pure",
                "startColumn": 11,
                "startLine": 19
              }
            },
            "sourceInformation": {
              "endColumn": 16,
              "endLine": 19,
              "sourceId": "class_with_annotations.pure",
              "startColumn": 11,
              "startLine": 19
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "name",
          "sourceInformation": {
            "endColumn": 8,
            "endLine": 19,
            "sourceId": "class_with_annotations.pure",
            "startColumn": 5,
            "startLine": 19
          }
        },
        {
          "genericType": {
            "rawType": {
              "fullPath": "Integer",
              "sourceInformation": {
                "endColumn": 16,
                "endLine": 20,
                "sourceId": "class_with_annotations.pure",
                "startColumn": 10,
                "startLine": 20
              }
            },
            "sourceInformation": {
              "endColumn": 16,
              "endLine": 20,
              "sourceId": "class_with_annotations.pure",
              "startColumn": 10,
              "startLine": 20
            }
          },
          "multiplicity": {
            "lowerBound": 0,
            "upperBound": 1
          },
          "name": "age",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 20,
            "sourceId": "class_with_annotations.pure",
            "startColumn": 5,
            "startLine": 20
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 21,
        "sourceId": "class_with_annotations.pure",
        "startColumn": 1,
        "startLine": 17
      },
      "stereotypes": [
        {
          "profile": "temporal",
          "profileSourceInformation": {
            "endColumn": 17,
            "endLine": 17,
            "sourceId": "class_with_annotations.pure",
            "startColumn": 9,
            "startLine": 17
          },
          "sourceInformation": {
            "endColumn": 33,
            "endLine": 17,
            "sourceId": "class_with_annotations.pure",
            "startColumn": 9,
            "startLine": 17
          },
          "value": "businesstemporal"
        }
      ],
      "superTypes": [
        "model::domain::LegalEntity"
      ],
      "taggedValues": [
        {
          "sourceInformation": {
            "endColumn": 40,
            "endLine": 17,
            "sourceId": "class_with_annotations.pure",
            "startColumn": 38,
            "startLine": 17
          },
          "tag": {
            "profile": "doc",
            "profileSourceInformation": {
              "endColumn": 40,
              "endLine": 17,
              "sourceId": "class_with_annotations.pure",
              "startColumn": 38,
              "startLine": 17
            },
            "sourceInformation": {
              "endColumn": 40,
              "endLine": 17,
              "sourceId": "class_with_annotations.pure",
              "startColumn": 38,
              "startLine": 17
            },
            "value": "description"
          },
          "value": "A person entity"
        }
      ]
    },
    {
      "_type": "sectionIndex",
      "name": "class_with_annotations.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "model::domain::Person"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "class_with_annotations.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "class_with_annotations.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
