legend-pure-rust/crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_multi_element.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "class",
      "name": "Person",
      "package": "model",
      "properties": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "String",
              "sourceInformation": {
                "endColumn": 16,
                "endLine": 19,
                "sourceId": "multi_element.pure",
                "startColumn": 11,
                "startLine": 19
              }
            },
            "sourceInformation": {
              "endColumn": 16,
              "endLine": 19,
              "sourceId": "multi_element.pure",
              "startColumn": 11,
              "startLine": 19
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "name",
          "sourceInformation": {
            "endColumn": 8,
            "endLine": 19,
            "sourceId": "multi_element.pure",
            "startColumn": 5,
            "startLine": 19
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 20,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 17
      }
    },
    {
      "_type": "Enumeration",
      "name": "Status",
      "package": "model",
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 26,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 22
      },
      "values": [
        {
          "sourceInformation": {
            "endColumn": 10,
            "endLine": 24,
            "sourceId": "multi_element.pure",
            "startColumn": 5,
            "startLine": 24
          },
          "value": "ACTIVE"
        },
        {
          "sourceInformation": {
            "endColumn": 12,
            "endLine": 25,
            "sourceId": "multi_element.pure",
            "startColumn": 5,
            "startLine": 25
          },
          "value": "INACTIVE"
        }
      ]
    },
    {
      "_type": "function",
      "body": [
        {
          "_type": "func",
          "function": "plus",
          "parameters": [
            {
              "_type": "string",
              "sourceInformation": {
                "endColumn": 12,
                "endLine": 30,
                "sourceId": "multi_element.pure",
                "startColumn": 5,
                "startLine": 30
              },
              "value": "Hello "
            },
            {
              "_type": "property",
              "parameters": [
                {
                  "_type": "var",
                  "name": "p",
                  "sourceInformation": {
                    "endColumn": 16,
                    "endLine": 30,
                    "sourceId": "multi_element.pure",
                    "startColumn": 16,
                    "startLine": 30
                  }
                }
              ],
              "property": "name",
              "sourceInformation": {
                "endColumn": 18,
                "endLine": 30,
                "sourceId": "multi_element.pure",
                "startColumn": 18,
                "startLine": 30
              }
            }
          ],
          "sourceInformation": {
            "endColumn": 14,
            "endLine": 30,
            "sourceId": "multi_element.pure",
            "startColumn": 14,
            "startLine": 30
          }
        }
      ],
      "name": "greetPerson",
      "package": "model",
      "parameters": [
        {
          "genericType": {
            "rawType": {
              "fullPath": "model::Person",
              "sourceInformation": {
                "endColumn": 36,
                "endLine": 28,
                "sourceId": "multi_element.pure",
                "startColumn": 32,
                "startLine": 28
              }
            },
            "sourceInformation": {
              "endColumn": 36,
              "endLine": 28,
              "sourceId": "multi_element.pure",
              "startColumn": 32,
              "startLine": 28
            }
          },
          "multiplicity": {
            "lowerBound": 1,
            "upperBound": 1
          },
          "name": "p",
          "sourceInformation": {
            "endColumn": 29,
            "endLine": 28,
            "sourceId": "multi_element.pure",
            "startColumn": 29,
            "startLine": 28
          }
        }
      ],
      "returnGenericType": {
        "rawType": {
          "fullPath": "String",
          "sourceInformation": {
            "endColumn": 56,
            "endLine": 28,
            "sourceId": "multi_element.pure",
            "startColumn": 51,
            "startLine": 28
          }
        },
        "sourceInformation": {
          "endColumn": 56,
          "endLine": 28,
          "sourceId": "multi_element.pure",
          "startColumn": 51,
          "startLine": 28
        }
      },
      "returnMultiplicity": {
        "lowerBound": 1,
        "upperBound": 1
      },
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 31,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 28
      }
    },
    {
      "_type": "sectionIndex",
      "name": "multi_element.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "model::Person",
            "model::Status",
            "model::greetPerson"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "multi_element.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "multi_element.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
