legend-pure-rust/crates/protocol/tests/snapshots/e2e_snapshot_tests__e2e_profile.snap
---
source: crates/protocol/tests/e2e_snapshot_tests.rs
expression: json
---
{
  "elements": [
    {
      "_type": "profile",
      "name": "doc",
      "package": "meta::pure::profiles",
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 21,
        "sourceId": "profile.pure",
        "startColumn": 1,
        "startLine": 17
      },
      "stereotypes": [
        "deprecated",
        "experimental"
      ],
      "tags": [
        "description",
        "todo"
      ]
    },
    {
      "_type": "sectionIndex",
      "name": "profile.pure",
      "package": "__internal__",
      "sections": [
        {
          "_type": "default",
          "elements": [
            "meta::pure::profiles::doc"
          ],
          "parserName": "Pure",
          "sourceInformation": {
            "endColumn": 7,
            "endLine": 16,
            "sourceId": "profile.pure",
            "startColumn": 1,
            "startLine": 16
          }
        }
      ],
      "sourceInformation": {
        "endColumn": 7,
        "endLine": 16,
        "sourceId": "profile.pure",
        "startColumn": 1,
        "startLine": 16
      }
    }
  ],
  "serializer": {
    "name": "pure",
    "version": "vX_X_X"
  }
}
